Exclude build, dist and lib.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
-.DS_Store
 **~
-cruft
+build
+lib
+dist
 ext
+.DS_Store
 .idea
 .loadpath
 .project
 .yardoc
 .*/
-*.gem
 *.pdf
 *.pyc
 *.tar*
 **log
+**te?mp/
 /doc/api
 /test/results
