Fix line separator.

--- a/conf/sarcoma.cfg
+++ b/conf/sarcoma.cfg
@@ -1,1 +1,15 @@
-[Tumor Location]Sarcoma1=THIGH Sarcoma2=THIGHSarcoma3=CHESTSarcoma4=SHOULDERSarcoma5=THIGHSarcoma6=THIGH Sarcoma7=CALFSarcoma8=THIGHSarcoma9=THIGHSarcoma10=KNEESarcoma11=LEGSarcoma12=THIGH Sarcoma13=ELBOWSarcoma14=THIGH
+[Tumor Location]
+Sarcoma01 = THIGH
+Sarcoma02 = THIGH
+Sarcoma03 = CHEST
+Sarcoma04 = SHOULDER
+Sarcoma05 = THIGH
+Sarcoma06 = THIGH 
+Sarcoma07 = CALF
+Sarcoma08 = THIGH
+Sarcoma09 = THIGH
+Sarcoma10 = KNEE
+Sarcoma11 = LEG
+Sarcoma12 = THIGH 
+Sarcoma13 = ELBOW
+Sarcoma14 = THIGH
