Add config value coverage.

--- a/test/fixtures/helpers/tuning.cfg
+++ b/test/fixtures/helpers/tuning.cfg
@@ -2,5 +2,6 @@
 [Tuning]
 method = FFT
 iterations = [1, [2, [3, 4], 5]]
-two_tailed = false
+sampling = [.3, [None, [null, nil], 1.]]
+two_tailed = [true, False]
 threshold = 4.0
