Change JSON config to AST config.

--- a/test/fixtures/helpers/tuning.cfg
+++ b/test/fixtures/helpers/tuning.cfg
@@ -1,7 +1,9 @@
-# An example json_config configuration file.
+# An example ast_config configuration file.
 [Tuning]
 method = FFT
+description = String with [ ( 3 , a" ' 4.5 'b' ) ] characters
 iterations = [1, [2, [3, 4], 5]]
+parameters = [(1,), (2, 3)]
 sampling = [.3, [None, [null, nil], 1.]]
 two_tailed = [true, False]
 threshold = 4.0
