--- a/test/conf/registration.cfg
+++ b/test/conf/registration.cfg
@@ -3,6 +3,6 @@
 max_thresh = 1
 min_thresh = 1
 
-[Register]
+[ANTSRegistration]
 # ANTS Registration interface parameters which throttle down registration for test purposes.
 number_of_iterations = [[15, 2], [10, 5, 3]]
