Standardize the configuration section names.

--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -1,5 +1,5 @@
-[Mask]
-# The default MinVolCluster interface parameters.
+[FSLMriVolCluster]
+# The default FSL MinVolCluster interface parameters.
 max_thresh = 10
 min_voxels = 10000
 
@@ -29,7 +29,7 @@ use_estimate_learning_rate_once = [True, True]
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 
-[ANTSWarp]
+[ANTSApplyTransforms]
 # The default ANTS Warp interface parameters.
 dimension = 3
 interpolation = Linear
