--- a/test/conf/registration.cfg
+++ b/test/conf/registration.cfg
@@ -1,5 +1,5 @@
-[Mask]
-# MinVolCluster interface parameters which effectively disable masking for test purposes.
+[FSLMriVolCluster]
+# FSL MriVolCluster interface parameters which effectively disable masking for test purposes.
 max_thresh = 1
 min_thresh = 1
 
