--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -3,6 +3,15 @@
 max_thresh = 10
 min_voxels = 10000
 
+[FSLFNIRT]
+in_fwhm = [10,6,2,2]
+ref_fwhm = [8,4,0,0]
+regularization_lambda = [200,75,40,20]
+apply_intensity_mapping = [1,1,1,0]
+# Allowed range of Jacobian determinants, default 0.01,100.0
+jacobian_range = (0.005,100)
+intensity_mapping_model = 'global_linear'
+
 [ANTSAverage]
 # The default ANTS Average interface parameters.
 dimension = 3
