Add SGE options.

--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -1,3 +1,11 @@
+[Execution]
+# The time-out for registration of one MR session.
+job_finished_timeout = 60.0
+
+[SGE]
+# The Sun Grid Engine parameters.
+qsub_args = -l h_rt=1:00:00,mf=3G,h_vmem=3.5G -b n
+
 [FSLMriVolCluster]
 # The default FSL MinVolCluster interface parameters.
 max_thresh = 10
