--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -1,6 +1,6 @@
 [Execution]
-# The time-out for registration of one MR session.
-job_finished_timeout = 60.0
+# The registration time-out.
+job_finished_timeout = 2400.0
 
 [SGE]
 # The Sun Grid Engine parameters.
