Pull mask out of registration. Add lookup convenience interface. Clean up documentation.

--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -5,6 +5,9 @@ job_finished_timeout = 20
 # The Sun Grid Engine parameters.
 qsub_args = -l h_rt=1:00:00,mf=3G,h_vmem=3.5G -b n
 
+# TODO - change topics to correspond to Nipype interface
+# import path, e.g. fsl.MriVolCluster
+
 [FSLMriVolCluster]
 # The default FSL MinVolCluster interface parameters.
 max_thresh = 10
