Tweak the SGE settings.

--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -3,7 +3,7 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-qsub_args = -l h_rt=30:00,mf=1G,h_vmem=2G -b n
+qsub_args = -l h_rt=4:00:00,mf=2G -b n
 
 [FastFit]
 qsub_args = -pe mpi 48-120 -l h_rt=4:00:00,mf=750M,h_vmem=3G -b n
