--- a/conf/mask.cfg
+++ b/conf/mask.cfg
@@ -1,3 +1,10 @@
+[Execution]
+job_finished_timeout = 20
+
+[SGE]
+# The Sun Grid Engine parameters.
+qsub_args = -l h_rt=1:00:00,mf=2G -b n
+
 [FSLMriVolCluster]
 # The default FSL MinVolCluster interface parameters.
 max_thresh = 10
