--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -3,7 +3,7 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-qsub_args = -l h_rt=1:00:00,mf=3G,h_vmem=3.5G -b n
+qsub_args = -l h_rt=1:00:00,mf=3G -b n
 
 # TODO - change topics to correspond to Nipype interface
 # import path, e.g. fsl.MriVolCluster
