--- a/conf/staging.cfg
+++ b/conf/staging.cfg
@@ -3,4 +3,4 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-qsub_args = -l h_rt=1:00:00,mf=3G,h_vmem=3.5G -b n
+qsub_args = -l h_rt=1:00:00,mf=1G -b n
