Use the Nipype interface module prefix for the configuration topic.

--- a/conf/mask.cfg
+++ b/conf/mask.cfg
@@ -5,7 +5,7 @@ job_finished_timeout = 20
 # The Sun Grid Engine parameters.
 qsub_args = -l h_rt=1:00:00,mf=2G -b n
 
-[FSLMriVolCluster]
+[fsl.MriVolCluster]
 # The default FSL MinVolCluster interface parameters.
 max_thresh = 10
 min_voxels = 10000
