--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -5,15 +5,11 @@ job_finished_timeout = 20
 # The Sun Grid Engine parameters.
 qsub_args = -l h_rt=1:00:00,mf=3G -b n
 
-# TODO - change topics to correspond to Nipype interface
-# import path, e.g. fsl.MriVolCluster
-
-[FSLMriVolCluster]
-# The default FSL MinVolCluster interface parameters.
+[fsl.MriVolCluster]
 max_thresh = 10
 min_voxels = 10000
 
-[FSLFNIRT]
+[fsl.FNIRT]
 in_fwhm = [10,6,2,2]
 ref_fwhm = [8,4,0,0]
 regularization_lambda = [200,75,40,20]
@@ -21,13 +17,12 @@ apply_intensity_mapping = [1,1,1,0]
 jacobian_range = (0.005,100)
 intensity_mapping_model = 'global_linear'
 
-[ANTSAverage]
-# The default ANTS Average interface parameters.
+[ants.Average]
 dimension = 3
 normalize = True
 
-[ANTSRegistration]
-# The default ANTS Registration interface parameters.
+[ants.Registration]
+qsub_args = -pe smp 32 -l h_rt=4:00:00,mf=750M,h_vmem=3G -b n
 dimension = 3
 transforms = [Affine, SyN]
 transform_parameters = [(2.0,), (0.25, 3.0, 0.0)]
@@ -47,8 +42,7 @@ use_estimate_learning_rate_once = [True, True]
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 
-[ANTSApplyTransforms]
-# The default ANTS Warp interface parameters.
+[ants.ApplyTransforms]
 dimension = 3
 interpolation = Linear
 default_value = 0
