--- a/test/conf/mask.cfg
+++ b/test/conf/mask.cfg
@@ -1,4 +1,4 @@
-[FSLMriVolCluster]
+[fsl.MriVolCluster]
 # FSL MriVolCluster interface parameters which effectively disable masking
 # for test purposes.
 max_thresh = 1
