--- a/test/conf/registration.cfg
+++ b/test/conf/registration.cfg
@@ -1,3 +1,3 @@
-[ANTSRegistration]
+[ants.Registration]
 # ANTS Registration interface parameters which throttle down registration for test purposes.
 number_of_iterations = [[15, 2], [10, 5, 3]]
