--- a/conf/mask.cfg
+++ b/conf/mask.cfg
@@ -3,9 +3,9 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-qsub_args = -l h_rt=1:00:00,mf=2G -b n
+plugin_args = {'qsub_args': '-l h_rt=20:00,mf=2G -b n'}
 
-[fsl.MriVolCluster]
-# The default FSL MinVolCluster interface parameters.
+[MriVolCluster]
 max_thresh = 10
 min_voxels = 10000
+plugin_args = {'qsub_args': '-pe mpi 48-120 -l h_rt=4:00:00,mf=750M,h_vmem=3G', 'overwrite': True}
