--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -3,10 +3,10 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-qsub_args = -l h_rt=4:00:00,mf=2G -b n
+plugin_args = {'qsub_args': '-l h_rt=20:00,mf=2G -b n'}
 
 [FastFit]
-qsub_args = -pe mpi 48-120 -l h_rt=4:00:00,mf=750M,h_vmem=3G -b n
+plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
 
 [Parameters]
 r1_0_val = 0.7
