--- a/conf/qipipeline.cfg
+++ b/conf/qipipeline.cfg
@@ -3,4 +3,4 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-qsub_args = -l h_rt=8:00:00,mf=1G,h_vmem=3G -b n
+plugin_args = {'qsub_args': '-l h_rt=20:00,mf=2G -b n'}
