--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -3,13 +3,14 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-qsub_args = -l h_rt=1:00:00,mf=3G -b n
+plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=20:00,mf=3G -b n'}
 
 [fsl.MriVolCluster]
 max_thresh = 10
 min_voxels = 10000
 
 [fsl.FNIRT]
+plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
 in_fwhm = [10,6,2,2]
 ref_fwhm = [8,4,0,0]
 regularization_lambda = [200,75,40,20]
@@ -17,13 +18,13 @@ apply_intensity_mapping = [1,1,1,0]
 jacobian_range = (0.005,100)
 intensity_mapping_model = 'global_linear'
 
-[ants.Average]
+[ants.AverageImages]
+plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
 dimension = 3
 normalize = True
 
 [ants.Registration]
-qsub_args = -pe smp 32 -l h_rt=4:00:00,mf=750M,h_vmem=3G -b n
-dimension = 3
+plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=1:00:00,mf=3G'}
 transforms = [Affine, SyN]
 transform_parameters = [(2.0,), (0.25, 3.0, 0.0)]
 number_of_iterations = [[1500, 200], [100, 50, 30]]
@@ -43,7 +44,6 @@ output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 
 [ants.ApplyTransforms]
-dimension = 3
-interpolation = Linear
-default_value = 0
+plugin_args = {'qsub_args': '-pe smp 64 -l h_rt=1:00:00,mf=3G'}
+num_threads = 64
 invert_transform_flags = [False, False]
