--- a/test/fixtures/helpers/tuning.cfg
+++ b/test/fixtures/helpers/tuning.cfg
@@ -7,3 +7,5 @@ parameters = [(1,), (2, 3)]
 sampling = [.3, [None, [null, nil], 1.]]
 two_tailed = [true, False]
 threshold = 4.0
+plugin_args = {'qsub_args': '-pe mpi 48-120 -l h_rt=4:00:00,mf=2G -b n', 'overwrite': True}
+
