--- a/conf/mask.cfg
+++ b/conf/mask.cfg
@@ -3,9 +3,9 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=00:20:00,mf=2G -b n'}
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G -b n'}
 
 [MriVolCluster]
 max_thresh = 10
 min_voxels = 10000
-plugin_args = {'qsub_args': '-pe mpi 48-120 -l h_rt=4:00:00,mf=750M,h_vmem=3G', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe mpi 48-120 -l h_rt=4:00:00,mf=1G,h_vmem=3G', 'overwrite': True}
