--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -3,10 +3,10 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=00:20:00,mf=2G -b n'}
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G -b n'}
 
 [FastFit]
-plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
+plugin_args = {'qsub_args': '-l h_rt=2:00:00,mf=2G,h_vmem=3G'}
 
 [Parameters]
 r1_0_val = 0.7
