--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -3,14 +3,14 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=00:20:00,mf=3G -b n'}
+plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=0:30:00,mf=1G -b n'}
 
 [fsl.MriVolCluster]
 max_thresh = 10
 min_voxels = 10000
 
 [fsl.FNIRT]
-plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
+plugin_args = {'qsub_args': '-l h_rt=4:00:00,mf=3G'}
 in_fwhm = [10,6,2,2]
 ref_fwhm = [8,4,0,0]
 regularization_lambda = [200,75,40,20]
@@ -19,12 +19,12 @@ jacobian_range = (0.005,100)
 intensity_mapping_model = 'global_linear'
 
 [ants.AverageImages]
-plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
+plugin_args = {'qsub_args': '-l h_rt=2:00:00,mf=3G'}
 dimension = 3
 normalize = True
 
 [ants.Registration]
-plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=1:00:00,mf=3G'}
+plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=4:00:00,mf=2G,h_vmem=4G'}
 transforms = [Affine, SyN]
 transform_parameters = [(2.0,), (0.25, 3.0, 0.0)]
 number_of_iterations = [[1500, 200], [100, 50, 30]]
