--- a/conf/staging.cfg
+++ b/conf/staging.cfg
@@ -1,6 +1,9 @@
 [Execution]
-job_finished_timeout = 60
+job_finished_timeout = 10
 
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=2G -b n'}
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G -b n'}
+
+[DcmStack]
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=2G'}
