--- a/conf/logging.yaml
+++ b/conf/logging.yaml
@@ -4,7 +4,7 @@ version: 1
 disable_existing_loggers: False
 
 formatters:
-  default:
+  standard:
     format: '%(asctime)s %(name)s %(levelname)s %(message)s'
     datefmt: '%Y/%m/%d %H:%M:%S'
 
@@ -12,13 +12,13 @@ handlers:
   console:
     class: logging.StreamHandler
     level: ERROR
-    formatter: default
+    formatter: standard
     stream: ext://sys.stdout
-
+  
   file_handler:
     class: logging.handlers.RotatingFileHandler
-    level: INFO      
-    formatter: default
+    level: INFO
+    formatter: standard
     filename: log/qipipe.log
     maxBytes: 10485760 # 10MB
     backupCount: 4
@@ -32,4 +32,4 @@ loggers:
 
 root:
   level: INFO
-  handlers: [console, file_handler]
+  handlers: [console]
