--- a/conf/mask.cfg
+++ b/conf/mask.cfg
@@ -3,7 +3,7 @@ job_finished_timeout = 60
 
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=3G -b n'}
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=3G'}
 
 [MriVolCluster]
 max_thresh = 10
