--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -3,7 +3,7 @@ job_finished_timeout = 60
 
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G -b n'}
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G'}
 
 [FastFit]
 plugin_args = {'qsub_args': '-l h_rt=2:00:00,mf=2G,h_vmem=3G'}
