--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -3,7 +3,7 @@ job_finished_timeout = 60
 
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G -b n'}
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G'}
 
 [fsl.FNIRT]
 plugin_args = {'qsub_args': '-l h_rt=8:00:00,mf=3G'}
