--- a/conf/staging.cfg
+++ b/conf/staging.cfg
@@ -3,7 +3,7 @@ job_finished_timeout = 10
 
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G -b n'}
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G'}
 
 [DcmStack]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=2G'}
