--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -20,7 +20,7 @@ dimension = 3
 normalize = True
 
 [ants.Registration]
-plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=4:00:00,mf=2G'}
+plugin_args = {'qsub_args': '-pe smp 32-128 -l h_rt=4:00:00,mf=2G'}
 transforms = [Affine, SyN]
 transform_parameters = [(2.0,), (0.25, 3.0, 0.0)]
 number_of_iterations = [[1000, 100], [50, 20, 10]]
@@ -41,6 +41,6 @@ output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 
 [ants.ApplyTransforms]
-plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=2:00:00,mf=2G'}
+plugin_args = {'qsub_args': '-pe smp 32-128 -l h_rt=2:00:00,mf=2G'}
 num_threads = 32
 invert_transform_flags = [False, False]
