Add overwrite flag.

--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -6,7 +6,7 @@ job_finished_timeout = 60
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G'}
 
 [fsl.FNIRT]
-plugin_args = {'qsub_args': '-l h_rt=4:00:00,mf=32G'}
+plugin_args = {'qsub_args': '-l h_rt=4:00:00,mf=32G', 'overwrite': True}
 in_fwhm = [10,6,2,2]
 ref_fwhm = [8,4,0,0]
 regularization_lambda = [200,75,40,20]
@@ -20,7 +20,7 @@ dimension = 3
 normalize = True
 
 [ants.Registration]
-plugin_args = {'qsub_args': '-pe smp 32-128 -l h_rt=4:00:00,mf=2G'}
+plugin_args = {'qsub_args': '-pe smp 32-128 -l h_rt=4:00:00,mf=2G', 'overwrite': True}
 transforms = [Affine, SyN]
 transform_parameters = [(2.0,), (0.25, 3.0, 0.0)]
 number_of_iterations = [[1000, 100], [50, 20, 10]]
@@ -41,6 +41,6 @@ output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 
 [ants.ApplyTransforms]
-plugin_args = {'qsub_args': '-pe smp 32-128 -l h_rt=0:30:00,mf=1G'}
+plugin_args = {'qsub_args': '-pe smp 32-128'}
 num_threads = 32
 invert_transform_flags = [False, False]
