--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -6,7 +6,7 @@ job_finished_timeout = 60
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G'}
 
 [FastFit]
-plugin_args = {'qsub_args': '-l h_rt=2:00:00,mf=2G,h_vmem=3G'}
+plugin_args = {'qsub_args': '-l h_rt=2:00:00,mf=2G,h_vmem=3G', 'overwrite': True}
 
 [Parameters]
 r1_0_val = 0.7
