--- a/conf/staging.cfg
+++ b/conf/staging.cfg
@@ -6,4 +6,4 @@ job_finished_timeout = 10
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G'}
 
 [DcmStack]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=2G'}
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=2G', 'overwrite': True}
