Add the default baseline end index.

--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -10,3 +10,4 @@ plugin_args = {'qsub_args': '-l h_rt=2:00:00,mf=2G,h_vmem=3G', 'overwrite': True
 
 [Parameters]
 r1_0_val = 0.7
+baseline_end_idx = 1
