Increase the run time requirement.

--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -6,7 +6,7 @@ job_finished_timeout = 20
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G'}
 
 [fsl.FNIRT]
-plugin_args = {'qsub_args': '-l h_rt=4:00:00,mf=32G', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=4:00:00,mf=16G', 'overwrite': True}
 in_fwhm = [10,6,2,2]
 ref_fwhm = [8,4,0,0]
 regularization_lambda = [200,75,40,20]
@@ -41,6 +41,6 @@ output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 
 [ants.ApplyTransforms]
-plugin_args = {'qsub_args': '-pe smp 8-12'}
+plugin_args = {'qsub_args': '-pe smp 8-12 -l h_rt=1:00:00,mf=1G', 'overwrite': True'}
 num_threads = 8
 invert_transform_flags = [False, False]
