Fix plug-in argument.

--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -41,6 +41,6 @@ output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 
 [ants.ApplyTransforms]
-plugin_args = {'qsub_args': '-pe smp 8-12 -l h_rt=1:00:00,mf=1G', 'overwrite': True'}
+plugin_args = {'qsub_args': '-pe smp 8-12 -l h_rt=1:00:00,mf=1G', 'overwrite': True}
 num_threads = 8
 invert_transform_flags = [False, False]
