--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -3,10 +3,10 @@ job_finished_timeout = 20
 
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G'}
+plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
 
 [FastFit]
-plugin_args = {'qsub_args': '-l h_rt=2:00:00,mf=2G,h_vmem=3G', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe mpi 48-120 -l h_rt=2:00:00,mf=750M,h_vmem=3G', 'overwrite': True}
 
 [Parameters]
 r1_0_val = 0.7
