--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -8,6 +8,9 @@ plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
 [FastFit]
 plugin_args = {'qsub_args': '-pe mpi 48-120 -l h_rt=2:00:00,mf=750M,h_vmem=3G', 'overwrite': True}
 
+[CopyMeta]
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=4G', 'overwrite': True}
+
 [Parameters]
 r1_0_val = 0.7
 baseline_end_idx = 1
