The interface is Fastfit, not FastFit.

--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -5,7 +5,7 @@ job_finished_timeout = 20
 # The Sun Grid Engine parameters.
 plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
 
-[FastFit]
+[Fastfit]
 plugin_args = {'qsub_args': '-pe mpi 48-120 -l h_rt=2:00:00,mf=750M,h_vmem=3G', 'overwrite': True}
 
 [CopyMeta]
