--- a/conf/qipipeline.cfg
+++ b/conf/qipipeline.cfg
@@ -4,3 +4,6 @@ job_finished_timeout = 20
 [SGE]
 # The Sun Grid Engine parameters.
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=3G'}
+
+[registration]
+plugin_args = {'qsub_args': '-l h_rt=4:00:00,mf=3G', 'overwrite': True}
