--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -22,23 +22,24 @@ normalize = True
 [ants.Registration]
 plugin_args = {'qsub_args': '-pe smp 8-12 -l h_rt=4:00:00,mf=1G', 'overwrite': True}
 transforms = [Affine, SyN]
-transform_parameters = [(2.0,), (0.25, 3.0, 0.0)]
-number_of_iterations = [[1000, 100], [50, 20, 10]]
-write_composite_transform = True
-collapse_output_transforms = False
-metric = [Mattes, Mattes]
-metric_weight = [1, 1]
-num_threads = 8
-radius_or_number_of_bins = [200, 200]
-sampling_strategy = [Regular, None]
-sampling_percentage = [0.10, None]
+transform_parameters = [(.09,), (0.25, 3.0, 0.0)]
 convergence_threshold = [1.e-8, 1.e-9]
 convergence_window_size = [100, 100]
-smoothing_sigmas = [[4,2], [4,2,0]]
-shrink_factors = [[1,1], [3,2,1]]
-use_estimate_learning_rate_once = [True, True]
+metric = [Mattes, CC]
+metric_weight = [1, 1]
+number_of_iterations = [[1000, 1000, 1000], [50, 35, 15]]
+radius_or_number_of_bins = [32, 5]
+sampling_strategy = [Regular, None]
+sampling_percentage = [0.10, None]
+smoothing_sigmas = [[3,2,0], [3,2,0]]
+shrink_factors = [[3,2,1], [3,2,1]]
+use_histogram_matching = [True, True]
+use_estimate_learning_rate_once = [False, False]
+collapse_output_transforms = False
+num_threads = 8
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
+write_composite_transform = True
 
 [ants.ApplyTransforms]
 plugin_args = {'qsub_args': '-pe smp 8-12 -l h_rt=1:00:00,mf=1G', 'overwrite': True}
