--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -20,7 +20,7 @@ dimension = 3
 normalize = True
 
 [ants.Registration]
-plugin_args = {'qsub_args': '-pe smp 16-32 -l h_rt=8:00:00,mf=1G', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe smp 16 -l h_rt=8:00:00,mf=1G', 'overwrite': True}
 transforms = [Affine, SyN]
 transform_parameters = [(.09,), (0.25, 3.0, 0.0)]
 convergence_threshold = [1.e-8, 1.e-9]
@@ -36,7 +36,7 @@ shrink_factors = [[3,2,1], [3,2,1]]
 use_histogram_matching = [True, True]
 use_estimate_learning_rate_once = [False, False]
 collapse_output_transforms = False
-num_threads = 8
+num_threads = 16
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 write_composite_transform = True
