--- a/test/fixtures/helpers/ast_config/tuning.cfg
+++ b/test/fixtures/helpers/ast_config/tuning.cfg
@@ -4,8 +4,8 @@ method = FFT
 description = String with [ ( 3 , a" ' 4.5 'b' ) ] characters
 iterations = [1, [2, [3, 4], 5]]
 parameters = [(1,), (2, 3)]
-sampling = [.3, [None, [null, nil], 1.]]
+sampling = [.3, [None, [null, nil], 1.], -0.1]
 two_tailed = [true, False]
-threshold = 4.0
+threshold = 1.2e-8
 plugin_args = {'qsub_args': '-pe mpi 48-120 -l h_rt=4:00:00,mf=2G -b n', 'overwrite': True}
 
