--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -20,23 +20,28 @@ dimension = 3
 normalize = True
 
 [ants.Registration]
-plugin_args = {'qsub_args': '-pe smp 16 -l h_rt=8:00:00,mf=2G', 'overwrite': True}
+# These settings are tweaked from the following examples:
+#
+# * https://github.com/stnava/ANTs/blob/master/Scripts/newAntsExample.sh
+#
+# * The Nipype antsRegistrationBuildTemplate example
+#
+plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=8:00:00,mf=500M', 'overwrite': True}
 transforms = [Affine, SyN]
-transform_parameters = [(.09,), (0.25, 3.0, 0.0)]
-convergence_threshold = [1.e-8, 1.e-9]
-convergence_window_size = [100, 100]
+transform_parameters = [(.09,), (0.20, 3, 0)]
+convergence_threshold = [1.0e-8, -0.01]
+convergence_window_size = [5, 5]
 metric = [Mattes, CC]
 metric_weight = [1, 1]
-number_of_iterations = [[1000, 100, 100], [50, 20, 10]]
-radius_or_number_of_bins = [32, 5]
+number_of_iterations = [[10000, 111110, 11110], [100, 100, 50]]
+radius_or_number_of_bins = [32, 4]
 sampling_strategy = [Regular, None]
-sampling_percentage = [0.10, None]
-smoothing_sigmas = [[3,2,0], [3,2,0]]
-shrink_factors = [[3,2,1], [3,2,1]]
-use_histogram_matching = [True, True]
-use_estimate_learning_rate_once = [False, False]
+sampling_percentage = [0.3, None]
+smoothing_sigmas = [[4,2,1], [4,2,1]]
+shrink_factors = [[3,2,1], [4,2,1]]
+use_estimate_learning_rate_once = [True, True]
 collapse_output_transforms = False
-num_threads = 16
+num_threads = 32
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 write_composite_transform = True
