Set the sampling.

--- a/test/conf/registration.cfg
+++ b/test/conf/registration.cfg
@@ -1,3 +1,5 @@
 [ants.Registration]
 # ANTS Registration interface parameters which throttle down registration for test purposes.
-number_of_iterations = [[15, 2], [10, 5, 3]]
+convergence_threshold = [1.e-8, 0]
+number_of_iterations = [[1000, 0, 0], [100, 100, 50]]
+sampling_percentage = [0.1, None]
