--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -20,27 +20,25 @@ dimension = 3
 normalize = True
 
 [ants.Registration]
-# These settings are tweaked from the following examples:
+# The settings below are tweaked from the following examples:
 #
 # * https://github.com/stnava/ANTs/blob/master/Scripts/newAntsExample.sh
+#
+# * https://github.com/stnava/ANTs/blob/master/Scripts/antsRegistrationSyN.sh
 #
 # * The Nipype antsRegistrationBuildTemplate example
 #
 plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=8:00:00,mf=500M', 'overwrite': True}
-transforms = [Affine, SyN]
-convergence_threshold = [1e-8, -0.01]
-convergence_window_size = [5, 5]
-metric = [Mattes, CC]
-metric_weight = [1, 1]
-number_of_iterations = [[10000, 111110, 11110], [100, 100, 50]]
-radius_or_number_of_bins = [32, 4]
-sampling_strategy = [Regular, None]
-sampling_percentage = [0.3, None]
-smoothing_sigmas = [[4,2,1], [4,2,1]]
-shrink_factors = [[3,2,1], [4,2,1]]
-transform_parameters = [(.09,), (0.20, 3, 0)]
-use_estimate_learning_rate_once = [True, True]
-collapse_output_transforms = False
+transforms = [Rigid, Affine, SyN]
+metric = [MI, MI, CC]
+metric_weight = [1, 1, 1]
+number_of_iterations = [[10000, 500, 200, 100], [10000, 500, 200, 100], [100, 70, 50, 20]]
+radius_or_number_of_bins = [32, 32, 4]
+sampling_strategy = [Regular, Regular, None]
+sampling_percentage = [0.25, 0.25, None]
+smoothing_sigmas = [[3,2,1,0], [3,2,1,0], [3,2,1,0]]
+shrink_factors = [[8,4,2,1], [8,4,2,1], [8,4,2,1]]
+transform_parameters = [(0.1,), (0.1,), (0.1, 3, 0)]
 num_threads = 32
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
