--- a/conf/qipipeline.cfg
+++ b/conf/qipipeline.cfg
@@ -6,4 +6,4 @@ job_finished_timeout = 20
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=3G'}
 
 [registration]
-plugin_args = {'qsub_args': '-l h_rt=96:00:00,mf=500M', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=96:00:00,mf=1G', 'overwrite': True}
