--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -32,12 +32,12 @@ plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=8:00:00,mf=500M', 'overwrite': T
 transforms = [Rigid, Affine, SyN]
 metric = [MI, MI, CC]
 metric_weight = [1, 1, 1]
-number_of_iterations = [[10000, 500, 200, 100], [10000, 500, 200, 100], [100, 70, 50, 20]]
+number_of_iterations = [[10000, 500, 200, 100], [10000, 500, 200, 100], [100, 50, 20]]
 radius_or_number_of_bins = [32, 32, 4]
 sampling_strategy = [Regular, Regular, None]
 sampling_percentage = [0.3, 0.3, None]
-smoothing_sigmas = [[3,2,1,0], [3,2,1,0], [3,2,1,0]]
-shrink_factors = [[8,4,2,1], [8,4,2,1], [8,4,2,1]]
+smoothing_sigmas = [[3,2,1,0], [3,2,1,0], [2,1,0]]
+shrink_factors = [[8,4,2,1], [8,4,2,1], [4,2,1]]
 transform_parameters = [(0.1,), (0.1,), (0.1, 3, 0)]
 num_threads = 32
 output_transform_prefix = xfm
