--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -28,7 +28,7 @@ normalize = True
 #
 # * The Nipype antsRegistrationBuildTemplate example
 #
-plugin_args = {'qsub_args': '-pe smp 32 -l h_rt=8:00:00,mf=500M', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=8:00:00,mf=3G', 'overwrite': True}
 transforms = [Rigid, Affine, SyN]
 metric = [MI, MI, CC]
 metric_weight = [1, 1, 1]
@@ -39,7 +39,7 @@ sampling_percentage = [0.3, 0.3, None]
 smoothing_sigmas = [[3,2,1,0], [3,2,1,0], [2,1,0]]
 shrink_factors = [[8,4,2,1], [8,4,2,1], [4,2,1]]
 transform_parameters = [(0.1,), (0.1,), (0.1, 3, 0)]
-num_threads = 32
+num_threads = 4
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 write_composite_transform = True
