--- a/test/conf/registration.cfg
+++ b/test/conf/registration.cfg
@@ -1,14 +1,14 @@
 [ants.Registration]
 # ANTS Registration interface parameters which throttle down registration for test purposes.
 plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=1:00:00,mf=3G', 'overwrite': True}
-transforms = [Rigid, Affine]
-convergence_threshold = [1.e-8, 0]
-metric = [MI, MI]
-metric_weight = [1, 1]
-number_of_iterations = [[100, 20, 10], [100, 20, 10]]
-radius_or_number_of_bins = [32, 32]
-sampling_strategy = [Regular, Regular]
-sampling_percentage = [0.1, None]
-smoothing_sigmas = [[2,1,0], [2,1,0]]
-shrink_factors = [[4,2,1], [4,2,1]]
-transform_parameters = [(0.1,), (0.1,)]
+transforms = [Affine]
+convergence_threshold = [1.e-8]
+metric = [MI]
+metric_weight = [1]
+number_of_iterations = [[100, 20]]
+radius_or_number_of_bins = [32]
+sampling_strategy = [Regular]
+sampling_percentage = [None]
+smoothing_sigmas = [[1, 0]]
+shrink_factors = [[2, 1]]
+transform_parameters = [(0.1,)]
