--- a/conf/modeling.cfg
+++ b/conf/modeling.cfg
@@ -5,12 +5,16 @@ job_finished_timeout = 60
 # The Sun Grid Engine parameters.
 plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=3G'}
 
+[Parameters]
+r1_0_val = 0.7
+baseline_end_idx = 1
+
 [Fastfit]
 plugin_args = {'qsub_args': '-pe mpi 48-120 -l h_rt=4:00:00,mf=750M,h_vmem=3G', 'overwrite': True}
 
 [CopyMeta]
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=4G', 'overwrite': True}
 
-[Parameters]
-r1_0_val = 0.7
-baseline_end_idx = 1
+[get_r1_series]
+plugin_args = {'qsub_args': '-l h_rt=04:00:00,mf=4G', 'overwrite': True}
+
