--- a/conf/qipipeline.cfg
+++ b/conf/qipipeline.cfg
@@ -10,3 +10,6 @@ plugin_args = {'qsub_args': '-l h_rt=192:00:00,mf=1G', 'overwrite': True}
 
 [merge_reg]
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=8G', 'overwrite': True}
+
+[upload_reg_ts]
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=8G', 'overwrite': True}
