--- a/conf/qipipeline.cfg
+++ b/conf/qipipeline.cfg
@@ -11,7 +11,7 @@ plugin_args = {'qsub_args': '-l h_rt=192:00:00,mf=1G', 'overwrite': True}
 [merge_reg]
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=16G', 'overwrite': True}
 
-[download_reg_time_series]
+[upload_reg_time_series]
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=16G', 'overwrite': True}
 
 [download_reg_time_series]
