--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -28,6 +28,8 @@ normalize = True
 #
 # * The Nipype antsRegistrationBuildTemplate example
 #
+# TODO - try hidden --float 0 option
+#
 plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=8:00:00,mf=3G', 'overwrite': True}
 transforms = [Rigid, Affine, SyN]
 metric = [MI, MI, CC]
