--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-httplib2
-lxml
-pydicom
-numpy
-nibabel
-scipy
-nipy
-dipy
-traits
--e git+http://github.com/moloney/dcmstack.git#egg=dcmstack
--e git+http://github.com/FredLoney/nipype.git#egg=nipype
-nose
--e git+http://github.com/FredLoney/pyxnat.git#egg=pyxnat
-pyyaml
+httplib2==0.8
+lxml==3.3.1
+pydicom==0.9.8
+numpy==1.8.1
+nibabel==1.3.0
+scipy==0.13.3
+nipy==0.3.0
+dipy==0.7.1
+traits==4.4.0
+dcmstack==0.7.dev
+nipype
+nose==1.3.0
+pyxnat
