--- a/conf/registration.cfg
+++ b/conf/registration.cfg
@@ -5,6 +5,11 @@ job_finished_timeout = 60
 # The Sun Grid Engine parameters.
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G'}
 
+[fsl.FLIRT]
+plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=16G', 'overwrite': True}
+bins = 640
+cost_func = 'normcorr'
+
 [fsl.FNIRT]
 plugin_args = {'qsub_args': '-l h_rt=4:00:00,mf=16G', 'overwrite': True}
 in_fwhm = [10,6,2,2]
