--- a/conf/sarcoma.cfg
+++ b/conf/sarcoma.cfg
@@ -13,3 +13,13 @@ Sarcoma011 = LEG
 Sarcoma012 = THIGH 
 Sarcoma013 = ELBOW
 Sarcoma014 = THIGH
+Sarcoma015 = KNEE
+Sarcoma016 = THIGH
+Sarcoma017 = THIGH
+Sarcoma018 = KNEE
+Sarcoma019 = SHIN
+Sarcoma020 = HIP
+Sarcoma021 = THIGH
+Sarcoma022 = LEG
+Sarcoma023 = ANKLE
+Sarcoma024 = KNEE
