--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-httplib2==0.8
-lxml==3.3.1
-pydicom==0.9.8
 numpy==1.8.1
 nibabel==1.3.0
 scipy==0.13.3
 nipy==0.3.0
 dipy==0.7.1
 traits==4.4.0
-dcmstack==0.7.dev
-nipype
 nose==1.3.0
-pyxnat
+git+git://github.com/moloney/dcmstack.git@0.7.dev#egg=dcmstack
+git+git://github.com/FredLoney/nipype.git#egg=nipype-master
+qirest==1.1.1
