--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 numpy==1.8.1
-nibabel==1.3.0
 scipy==0.13.3
+matplotlib==1.3.1
+nibabel==1.3.0
 nipy==0.3.0
 dipy==0.7.1
 traits==4.4.0
 nose==1.3.0
 git+git://github.com/moloney/dcmstack.git@0.7.dev#egg=dcmstack
 git+git://github.com/FredLoney/nipype.git#egg=nipype-master
-qirest==1.1.1
+qiutil==1.1.2
