--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ matplotlib==1.4.0
 nipy==0.3.0
 dipy==0.7.1
 traits==4.4.0
+networkx==1.8.1
 nose==1.3.0
-git+git://github.com/moloney/dcmstack.git@0.7.dev#egg=dcmstack
+git+git://github.com/moloney/dcmstack.git#egg=dcmstack
 git+git://github.com/FredLoney/nipype.git#egg=nipype-master
 qiutil==1.1.2
