--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ nipy==0.3.0
 dipy==0.7.1
 traits==4.4.0
 networkx==1.8.1
-nose==1.3.0
 qiutil==2.1.8
 qidicom==2.2.2
 qixnat==3.2.2
+qiprofile-rest-client==5.1.1
 git+git://github.com/moloney/dcmstack.git#egg=dcmstack
 git+git://github.com/FredLoney/nipype.git#egg=nipype-master
