Throttle the job count.

--- a/conf/qipipeline.cfg
+++ b/conf/qipipeline.cfg
@@ -1,6 +1,7 @@
 [SGE]
 # The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=3G'}
+# The OHSU AIRC SGE is constrained to 200 concurrent jobs.
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=3G', 'max_jobs': 200}
 
 [registration]
 plugin_args = {'qsub_args': '-l h_rt=192:00:00,mf=1G', 'overwrite': True}
