Set the max_jobs to 120 in default.cfg rather than qipipeline.cfg.

--- a/conf/default.cfg
+++ b/conf/default.cfg
@@ -5,8 +5,9 @@
 [Execution]
 # Wait two seconds before checking outputs.
 job_finished_timeout = 20
-# The AIRC cluster is limited to 200 jobs.
-max_jobs = 200
+# The OHSU AIRC SGE is constrained to 200 concurrent jobs. The max
+# is set to 120 to allow for other job submissions.
+max_jobs = 120
 
 [SGE]
 # The Sun Grid Engine parameters.
