--- a/conf/qipipeline.cfg
+++ b/conf/qipipeline.cfg
@@ -1,8 +1,6 @@
 [SGE]
 # The Sun Grid Engine parameters.
-# The OHSU AIRC SGE is constrained to 200 concurrent jobs. The max is
-# set to 120 to allow for other job submissions.
-plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=3G', 'max_jobs': 120}
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=3G'}
 
 [registration]
 plugin_args = {'qsub_args': '-l h_rt=192:00:00,mf=1G', 'overwrite': True}
