--- a/conf/default.cfg
+++ b/conf/default.cfg
@@ -3,10 +3,10 @@
 # configuration file.
 
 [Execution]
-# Wait two seconds before checking outputs.
-job_finished_timeout = 20
-# The OHSU AIRC SGE is constrained to 200 concurrent jobs. The max
-# is set to 120 to allow for other job submissions.
+# Wait thirty seconds before checking outputs.
+job_finished_timeout = 30
+# The OHSU AIRC SGE is constrained to 200 concurrent jobs.
+# The max is set to 120 to allow for other job submissions.
 max_jobs = 120
 
 [SGE]
