--- a/conf/qipipeline.cfg
+++ b/conf/qipipeline.cfg
@@ -8,6 +8,9 @@ plugin_args = {'qsub_args': '-l h_rt=192:00:00,mf=1G', 'overwrite': True}
 [merge_reg]
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=16G', 'overwrite': True}
 
+[upload_dicom]
+plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
+
 [upload_reg_time_series]
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=16G', 'overwrite': True}
 
