--- a/conf/staging.cfg
+++ b/conf/staging.cfg
@@ -1,2 +1,5 @@
 [DcmStack]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=32G', 'overwrite': True}
+
+[upload_dicom]
+plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
