Work around Nipype max_jobs bug.

--- a/conf/default.cfg
+++ b/conf/default.cfg
@@ -6,8 +6,14 @@
 # Wait thirty seconds before checking outputs.
 job_finished_timeout = 30
 # The OHSU AIRC SGE is constrained to 200 concurrent jobs.
-# The max is set to 120 to allow for other job submissions.
-max_jobs = 120
+# Work around a possible Nipype bug by setting the max jobs
+# very low. Even when max_jobs is set to 120 as is done
+# below, the pipeline fails with a SGE message that the
+# number of jobs exceeds 200. Nothing in the logs indicate
+# the source of the problem.
+# # The max is set to 120 to allow for other job submissions.
+#max_jobs = 120
+max_jobs=16
 
 [SGE]
 # The Sun Grid Engine parameters.
