--- a/conf/default.cfg
+++ b/conf/default.cfg
@@ -5,15 +5,15 @@
 [Execution]
 # Wait thirty seconds before checking outputs.
 job_finished_timeout = 30
-# The OHSU AIRC SGE is constrained to 200 concurrent jobs.
-# Work around a possible Nipype bug by setting the max jobs
-# very low. Even when max_jobs is set to 120 as is done
-# below, the pipeline fails with a SGE message that the
-# number of jobs exceeds 200. Nothing in the logs indicate
-# the source of the problem.
-# # The max is set to 120 to allow for other job submissions.
-#max_jobs = 120
-max_jobs=16
+# OHSU - The OHSU AIRC SGE is constrained to 200 concurrent jobs.
+# Work around a possible Nipype bug by setting the max jobs much
+# less than 200. Even when max_jobs is set to 120 as is done
+# below, the pipeline fails with a SGE message that the number
+# of jobs exceeds 200. Nothing in the logs indicate the source
+# of the problem. 32 jobs is not constraining, since the AIRC
+# SGE cluster rarely executes more that 20 jobs at a time for
+# a given user.
+max_jobs=32
 
 [SGE]
 # The Sun Grid Engine parameters.
