--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ nipy==0.3.0
 dipy==0.7.1
 traits==4.4.0
 networkx==1.8.1
-qiutil==2.2.1
-qidicom==2.2.7
-qixnat==3.4.2
-qiprofile-rest-client==5.2.1
+qiutil==2.2.3
+qidicom==2.3.1
+qixnat==3.4.3
+qiprofile-rest-client==5.3.1
+six==1.9.0
 git+git://github.com/moloney/dcmstack.git#egg=dcmstack
 git+git://github.com/FredLoney/nipype.git#egg=nipype-master
