Add plug-in config option.

--- a/qipipe/conf/default.cfg
+++ b/qipipe/conf/default.cfg
@@ -1,6 +1,9 @@
 # This file defines the default settings for all workflows.
 # These settings can be overridden in the workflow-specific
 # configuration file.
+#
+# TODO - move this to the OHSU extension.
+#
 
 [Execution]
 # Wait thirty seconds before checking outputs.
@@ -13,7 +16,9 @@ job_finished_timeout = 30
 # of the problem. 32 jobs is not constraining, since the AIRC
 # SGE cluster rarely executes more that 20 jobs at a time for
 # a given user.
-max_jobs=32
+max_jobs = 32
+# OHSU - the plug-in is SGE.
+plug-in = 'SGE'
 
 [SGE]
 # The Sun Grid Engine parameters.
