Configure run_without_submitting nodes.

--- a/qipipe/conf/default.cfg
+++ b/qipipe/conf/default.cfg
@@ -17,9 +17,47 @@ job_finished_timeout = 30
 # SGE cluster rarely executes more that 20 jobs at a time for
 # a given user.
 max_jobs = 32
-# OHSU - the plug-in is SGE.
+# OHSU - the AIRC plug-in is SGE.
 plug-in = 'SGE'
 
 [SGE]
 # The Sun Grid Engine parameters.
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G'}
+
+## Interfaces that can run quickly enough not to submit as a
+## cluster job.
+## Note: ensure that qipipe is submitted with sufficient
+## resources to accomodate these tasks.
+
+[Copy]
+run_without_submitting = True
+
+[Move]
+run_without_submitting = True
+
+[Touch]
+run_without_submitting = True
+
+[Compress]
+run_without_submitting = True
+
+[Uncompress]
+run_without_submitting = True
+
+[Merge]
+run_without_submitting = True
+
+[FixDicom]
+run_without_submitting = True
+
+[Gate]
+run_without_submitting = True
+
+[Lookup]
+run_without_submitting = True
+
+[Pack]
+run_without_submitting = True
+
+[Unpack]
+run_without_submitting = True
