--- a/qipipe/conf/mask.cfg
+++ b/qipipe/conf/mask.cfg
@@ -6,3 +6,6 @@ plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=4G'}
 max_thresh = 10
 min_voxels = 10000
 plugin_args = {'qsub_args': '-pe mpi 32-120 -l h_rt=8:00:00,mf=500M,h_vmem=2G', 'overwrite': True}
+
+[mask_name]
+run_without_submitting = True
