--- a/qipipe/conf/roi.cfg
+++ b/qipipe/conf/roi.cfg
@@ -1,3 +1,6 @@
 [SGE]
 # The Sun Grid Engine parameters.
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=4G'}
+
+[basename]
+run_without_submitting = True
