--- a/qipipe/conf/qipipeline.cfg
+++ b/qipipe/conf/qipipeline.cfg
@@ -14,5 +14,8 @@ plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=4G', 'overwrite': True}
 [download_reg_time_series]
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=4G', 'overwrite': True}
 
+[roi]
+plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
+
 [bolus_arrival_index]
 plugin_args = {'qsub_args': '-l h_rt=0:10:00,mf=16G', 'overwrite': True}
