--- a/qipipe/conf/qipipeline.cfg
+++ b/qipipe/conf/qipipeline.cfg
@@ -2,17 +2,17 @@
 # The Sun Grid Engine parameters.
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G'}
 
-[registration]
+[register]
 plugin_args = {'qsub_args': '-l h_rt=256:00:00,mf=1G', 'overwrite': True}
 
 [merge_reg]
-plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=4G', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=16G', 'overwrite': True}
 
 [upload_reg_time_series]
-plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=4G', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=16G', 'overwrite': True}
 
 [download_reg_time_series]
-plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=4G', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=16G', 'overwrite': True}
 
 [roi]
 plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
