Recursive registration is optional.

--- a/qipipe/conf/qipipeline.cfg
+++ b/qipipe/conf/qipipeline.cfg
@@ -1,9 +1,10 @@
 [SGE]
-# The Sun Grid Engine parameters.
+# The default Sun Grid Engine parameters for tasks submitted by the
+# supervisory qipipeline workflow.
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=1G'}
 
 [register]
-plugin_args = {'qsub_args': '-l h_rt=256:00:00,mf=1G', 'overwrite': True}
+run_without_submitting = True
 
 [merge_reg]
 plugin_args = {'qsub_args': '-l h_rt=0:30:00,mf=16G', 'overwrite': True}
