--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -1,3 +1,6 @@
+[input_filename]
+run_without_submitting = True
+
 [fsl.FLIRT]
 plugin_args = {'qsub_args': '-l h_rt=1:00:00,mf=16G', 'overwrite': True}
 bins = 640
