--- a/test/conf/registration.cfg
+++ b/test/conf/registration.cfg
@@ -1,5 +1,6 @@
 [ants.Registration]
-# ANTS Registration interface parameters which throttle down registration for test purposes.
+# ANTS Registration interface parameters which throttle down
+# registration for test purposes.
 plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=1:00:00,mf=2G', 'overwrite': True}
 transforms = [Affine]
 convergence_threshold = [1.e-8]
