--- a/test/conf/registration.cfg
+++ b/test/conf/registration.cfg
@@ -1,3 +1,17 @@
+[fsl.FLIRT]
+plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=16G', 'overwrite': True}
+bins = 64
+cost_func = 'normcorr'
+
+[fsl.FNIRT]
+plugin_args = {'qsub_args': '-l h_rt=04:00:00,mf=16G', 'overwrite': True}
+in_fwhm = [4,2,2]
+ref_fwhm = [8,4,0]
+regularization_lambda = [100,25,10]
+apply_intensity_mapping = [1,1,0]
+jacobian_range = (0.005,100)
+intensity_mapping_model = 'global_linear'
+
 [ants.Registration]
 # ANTS Registration interface parameters which throttle down
 # registration for test purposes.
