--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-bunch==1.0.1
-inflection==0.3.1
-numpy==1.9.2
-nibabel==2.0.1
-scipy==0.16.0
-sympy==0.7.5
-matplotlib==1.4.0
-nipy==0.3.0
-dipy==0.9.2
-traits==4.5.0
-networkx==1.8.1
-openpyxl==2.2.3
+bunch
+inflection
+numpy
+nibabel
+scipy
+sympy
+matplotlib
+nipy
+dipy
+traits
+networkx
+openpyx
 six==1.9.0
 qiutil==2.2.8
 qidicom==2.3.7
