--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -43,6 +43,7 @@ smoothing_sigmas = [[3,2,1,0], [3,2,1,0], [2,1,0]]
 shrink_factors = [[8,4,2,1], [8,4,2,1], [4,2,1]]
 transform_parameters = [(0.1,), (0.1,), (0.1, 3, 0)]
 num_threads = 4
+float = True
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 write_composite_transform = True
