--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ traits
 networkx
 openpyxl
 six==1.9.0
-qiutil==2.2.8
-qidicom==2.3.8
-qixnat==4.1.4
-qiprofile-rest-client==5.6.3
+qiutil
+qidicom
+qixnat
+qiprofile-rest-client
 git+git://github.com/moloney/dcmstack.git#egg=dcmstack
 git+git://github.com/FredLoney/nipype.git#egg=nipype-master
