--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -20,6 +20,15 @@ plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=16G'}
 dimension = 3
 normalize = True
 
+[AffineInitializer]
+plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=08:00:00,mf=4G', 'overwrite': True}
+dimension = 3
+output_affine_transform = initial_xform.mat
+search_factor = 10
+radian_fraction = 0.3
+use_principal_axes = True
+use_local_search = 20
+
 [ants.Registration]
 # The settings below are tweaked from the following examples:
 #
@@ -27,10 +36,10 @@ normalize = True
 #
 # * https://github.com/stnava/ANTs/blob/master/Scripts/antsRegistrationSyN.sh
 #
+# * http://sourceforge.net/p/advants/discussion/840261/thread/2114c74f/
+#
 # * The Nipype antsRegistrationBuildTemplate example
-#
-# TODO - try hidden --float 0 option
-#
+##
 plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=08:00:00,mf=4G', 'overwrite': True}
 transforms = [Rigid, Affine, SyN]
 metric = [MI, MI, CC]
@@ -43,7 +52,7 @@ smoothing_sigmas = [[3,2,1,0], [3,2,1,0], [2,1,0]]
 shrink_factors = [[8,4,2,1], [8,4,2,1], [4,2,1]]
 transform_parameters = [(0.1,), (0.1,), (0.1, 3, 0)]
 num_threads = 4
-float = True
+float = False
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 write_composite_transform = True
