Exclude mpi4py from the ReadTheDocs build.

--- a/requirements_read_the_docs.txt
+++ b/requirements_read_the_docs.txt
@@ -1,14 +1,22 @@
 # The requirements for a ReadTheDocs build only.
-# This file excludes nibabel and any packages which depend on nibabel,
-# since numpy must be built before the requirements are even collected,
+# This file excludes the following packages:
+# * nibabel
+# * any packages which depend on nibabel
+# * mpi4py
+#
+# ReadTheDocs build fails on nibabel and dependent packages, since
+# numpy must be built before the requirements are even collected,
 # as explained in the qipipe Installation Guide. ReadTheDocs does
 # not support this customization.
+#
+# ReadTheDocs build fails on mpi4py, since the environment cannot
+# build MPI programs.
+#
 bunch
 inflection
 numpy
 scipy
 sympy
-mpi4py
 matplotlib
 nipy
 dipy
