--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -2,9 +2,16 @@
 # The Sun Grid Engine parameters.
 plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=16G'}
 
+[Fastfit]
+plugin_args = {'qsub_args': '-pe mpi 24-48 -l h_rt=08:00:00,mf=750M,h_vmem=2G', 'overwrite': True}
+
 [R1]
 r1_0_val = 0.7
 baseline_end_idx = 1
+r1_cr = 3.8
+r1_b_pre = 0.71
 
-[Fastfit]
-plugin_args = {'qsub_args': '-pe mpi 24-48 -l h_rt=08:00:00,mf=750M,h_vmem=2G', 'overwrite': True}
+[AIF]
+aif_scale = 0.674
+aif_params = [0.4, 2.2, 0.23, 1.3, 0.09, 0.0013, 0.0]
+aif_delta_t = 1.5
