--- a/qipipe/conf/default.cfg
+++ b/qipipe/conf/default.cfg
@@ -24,6 +24,9 @@ plug-in = 'SGE'
 # The Sun Grid Engine parameters.
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G'}
 
+[MergeNifti]
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=32G', 'overwrite': True}
+
 ## Interfaces that can run quickly enough not to submit as a
 ## cluster job.
 ## Note: ensure that qipipe is submitted with sufficient
@@ -32,19 +35,7 @@ plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G'}
 [Copy]
 run_without_submitting = True
 
-[Move]
-run_without_submitting = True
-
-[Touch]
-run_without_submitting = True
-
 [Compress]
-run_without_submitting = True
-
-[Uncompress]
-run_without_submitting = True
-
-[Merge]
 run_without_submitting = True
 
 [FixDicom]
@@ -56,7 +47,20 @@ run_without_submitting = True
 [Lookup]
 run_without_submitting = True
 
+[Merge]
+run_without_submitting = True
+
 [Pack]
+run_without_submitting = True
+
+
+[Move]
+run_without_submitting = True
+
+[Touch]
+run_without_submitting = True
+
+[Uncompress]
 run_without_submitting = True
 
 [Unpack]
