--- a/requirements_read_the_docs.txt
+++ b/requirements_read_the_docs.txt
@@ -1,5 +1,6 @@
 # The requirements for a ReadTheDocs build only. This file excludes
 # the following packages:
+# * cython
 # * nibabel
 # * any packages which depend on nibabel
 # * mpi4py
@@ -22,11 +23,7 @@
 bunch
 inflection
 numpy
-scipy
-sympy
 matplotlib
-nipy
-dipy
 traits
 networkx
 openpyxl
