Move fastfit params to config.

--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -4,6 +4,8 @@ plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=16G'}
 
 [Fastfit]
 plugin_args = {'qsub_args': '-pe mpi 24-48 -l h_rt=08:00:00,mf=750M,h_vmem=2G', 'overwrite': True}
+model_name = 'fxr.model'
+optional_outs = ['chisq', 'guess_model.k_trans', 'guess_model.v_e', 'guess_model.chisq']
 
 [R1]
 r1_0_val = 0.7
