Add module qualifier to AffineInitializer config.

--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -20,7 +20,7 @@ plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=16G'}
 dimension = 3
 normalize = True
 
-[AffineInitializer]
+[ants.AffineInitializer]
 plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=8:00:00,mf=4G', 'overwrite': True}
 dimension = 3
 output_affine_transform = initial_xform.mat
