--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -21,13 +21,14 @@ dimension = 3
 normalize = True
 
 [ants.AffineInitializer]
-plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=8:00:00,mf=4G', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=8:00:00,mf=500M', 'overwrite': True}
+num_threads = 4
 dimension = 3
-output_affine_transform = initial_xform.mat
 search_factor = 10
 radian_fraction = 0.3
 use_principal_axes = True
 use_local_search = 20
+output_affine_transform = initial_xform.mat
 
 [ants.Registration]
 # The settings below are tweaked from the following examples:
@@ -41,6 +42,8 @@ use_local_search = 20
 # * The Nipype antsRegistrationBuildTemplate example
 ##
 plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=16:00:00,mf=4G', 'overwrite': True}
+num_threads = 4
+float = False
 transforms = [Rigid, Affine, SyN]
 metric = [MI, MI, CC]
 metric_weight = [1, 1, 1]
@@ -51,8 +54,6 @@ sampling_percentage = [0.3, 0.3, None]
 smoothing_sigmas = [[3,2,1,0], [3,2,1,0], [2,1,0]]
 shrink_factors = [[8,4,2,1], [8,4,2,1], [4,2,1]]
 transform_parameters = [(0.1,), (0.1,), (0.1, 3, 0)]
-num_threads = 4
-float = False
 output_transform_prefix = xfm
 output_warped_image = warp.nii.gz
 write_composite_transform = True
