--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -21,7 +21,7 @@ dimension = 3
 normalize = True
 
 [ants.AffineInitializer]
-plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=8:00:00,mf=500M', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe smp 4-8 -l h_rt=8:00:00,mf=250M,h_vmem=1G', 'overwrite': True}
 num_threads = 4
 dimension = 3
 search_factor = 10
@@ -41,7 +41,7 @@ output_affine_transform = initial_xform.mat
 #
 # * The Nipype antsRegistrationBuildTemplate example
 ##
-plugin_args = {'qsub_args': '-pe smp 4 -l h_rt=16:00:00,mf=4G', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe smp 8-12 -l h_rt=16:00:00,mf=500M,h_vmem=2G', 'overwrite': True}
 num_threads = 4
 float = False
 transforms = [Rigid, Affine, SyN]
