--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -7,6 +7,9 @@ plugin_args = {'qsub_args': '-pe mpi 24-48 -l h_rt=08:00:00,mf=750M,h_vmem=2G', 
 model_name = 'fxr.model'
 optional_outs = ['chisq', 'guess_model.k_trans', 'guess_model.v_e', 'guess_model.chisq']
 
+[create_profile]
+plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=250M', 'overwrite': True}
+
 [R1]
 r1_0_val = 0.7
 baseline_end_idx = 1
