--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -1,17 +1,23 @@
+# The modeling workflow parameters. Besides the node name and
+# interface topics, this configuration includes the static
+# R1 and AIF modeling input parameters.
+
 [SGE]
-# The Sun Grid Engine parameters.
-plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=16G'}
+# The Sun Grid Engine parameters. The default node memory is
+# set to a generous amount, since most nodes operate on sizable
+# 4D time series images.
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G'}
 
 [Fastfit]
-plugin_args = {'qsub_args': '-pe mpi 24-48 -l h_rt=08:00:00,mf=750M,h_vmem=2G', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe mpi 24-48 -l h_rt=24:00:00,mf=750M,h_vmem=2G', 'overwrite': True}
 model_name = 'fxr.model'
 optional_outs = ['chisq', 'guess_model.k_trans', 'guess_model.v_e', 'guess_model.chisq']
 
-[get_aif_shift]
-plugin_args = {'qsub_args': '-l h_rt=00:02:00,mf=250M', 'overwrite': True}
-
 [create_profile]
-plugin_args = {'qsub_args': '-l h_rt=00:02:00,mf=250M', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=1G', 'overwrite': True}
+
+[r1_series]
+plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=16G', 'overwrite': True}
 
 [R1]
 r1_0_val = 0.7
