--- a/qipipe/conf/roi.cfg
+++ b/qipipe/conf/roi.cfg
@@ -7,3 +7,7 @@ plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G'}
 
 [basename]
 run_without_submitting = True
+
+[ColorTable]
+# The color table file path relative to the web app root.
+location = 'data/color_tables/jet_colors.txt'
