Change DWI to DW.

--- a/qipipe/conf/sarcoma.cfg
+++ b/qipipe/conf/sarcoma.cfg
@@ -1,5 +1,5 @@
 [Scan]
-scans = {1: 'T1', 2: 'T2', 4: 'DWI', 6: 'PD'}
+scans = {1: 'T1', 2: 'T2', 4: 'DW', 6: 'PD'}
 
 [Tumor Location]
 Sarcoma001 = THIGH
