--- a/qipipe/conf/staging.cfg
+++ b/qipipe/conf/staging.cfg
@@ -1,8 +1,11 @@
 [DcmStack]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
 
 [upload_dicom]
 plugin_args = {'qsub_args': '-l h_rt=02:00:00,mf=1G', 'overwrite': True}
+
+[fix_dicom]
+run_without_submitting = True
 
 [collect_scan_dicom]
 run_without_submitting = True
