Run all sub-workflow wrapper methods without submission.

--- a/qipipe/conf/qipipeline.cfg
+++ b/qipipe/conf/qipipeline.cfg
@@ -3,20 +3,55 @@
 # supervisory qipipeline workflow.
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G'}
 
+# The stage, roi, mask, register and model tasks have their own
+# workflow. The precedence relationships are as follows:
+#
+# stage -> roi, mask, register, scan model
+# mask -> register, scan/realigned model
+# register -> realigned model
+#
+# Although independent tasks could be executed concurrently, they
+# are instead serialized without submission, since queue wait time
+# makes a fixed duration limit estimate impractical. The exception
+# is roi, which has no downstream tasks and usually takes less than
+# 30 minutes.
+#
+# Rather than guess at fixed durations, the person executing qipipe
+# is responsible for submitting the qipipe job with an inclusive
+# time limit. For a scan with 3200 DICOM files, execution time
+# estimates are as follows:
+#
+# * Staging: 24 hours
+# * Mask: 4 hours
+# * ANTs registration: 96 hours
+# * Bolero modeling: 72 hours
+#
+# These estimates exclude queue wait.
+#
 [stage]
-plugin_args = {'qsub_args': '-l h_rt=08:00:00,mf=4G', 'overwrite': True}
+run_without_submitting = True
+
+[mask]
+run_without_submitting = True
+
+[register]
+run_without_submitting = True
+
+[model]
+run_without_submitting = True
 
 [bolus_arrival_index]
 plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=16G', 'overwrite': True}
 
-[register]
-run_without_submitting = True
+#
+# Time series tasks, esp. merge, require extra memory.
+#
 
 [merge_reg]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
 
 [upload_reg_time_series]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
 
 [download_reg_time_series]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
