--- a/qipipe/conf/qipipeline.cfg
+++ b/qipipe/conf/qipipeline.cfg
@@ -44,7 +44,7 @@ run_without_submitting = True
 plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=16G', 'overwrite': True}
 
 #
-# Time series tasks, esp. merge, require extra memory.
+# The registration time series tasks, esp. merge, require extra memory.
 #
 
 [merge_reg]
