--- a/qipipe/conf/default.cfg
+++ b/qipipe/conf/default.cfg
@@ -38,7 +38,7 @@ run_without_submitting = True
 [Compress]
 run_without_submitting = True
 
-[Gate]
+[StickyIdentityInterface]
 run_without_submitting = True
 
 [Lookup]
