Add modeling optimization parameters.

--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -9,8 +9,9 @@
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G'}
 
 [Fastfit]
-plugin_args = {'qsub_args': '-pe mpi 12-24 -l h_rt=48:00:00,mf=500M,h_vmem=4G', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe mpi 12-24 -l h_rt=24:00:00,mf=500M,h_vmem=4G', 'overwrite': True}
 model_name = 'baldero.full'
+optimization_params = ['k_trans', 'v_e', 'v_b', 'tau_b', 'tau_i']
 optional_outs = ['chisq', 'ext_tofts.k_trans', 'ext_tofts.v_e', 'ext_tofts.chisq']
 
 [create_profile]
