--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -3,9 +3,8 @@
 # R1 and AIF modeling input parameters.
 
 [SGE]
-# The Sun Grid Engine parameters. The default node memory is
-# set to a generous amount, since most nodes operate on sizable
-# 4D time series images.
+# The Sun Grid Engine parameters. The default node memory is generous
+# since most nodes operate on the sizable 4D time series image.
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G'}
 
 [Fastfit]
