Make the default memory 4G.

--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -3,9 +3,9 @@
 # R1 and AIF modeling input parameters.
 
 [SGE]
-# The Sun Grid Engine parameters. The default node memory is generous
+# The Sun Grid Engine parameters. The default node memory is generous,
 # since most nodes operate on the sizable 4D time series image.
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G'}
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G'}
 
 [Fastfit]
 plugin_args = {'qsub_args': '-pe mpi 12-24 -l h_rt=24:00:00,mf=500M,h_vmem=4G', 'overwrite': True}
@@ -14,13 +14,8 @@ optimization_params = ['k_trans', 'v_e', 'v_b', 'tau_b', 'tau_i']
 optional_outs = ['chisq', 'ext_tofts.k_trans', 'ext_tofts.v_e', 'ext_tofts.chisq']
 
 [create_profile]
+# Making the profile doesn't take long.
 plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=1G', 'overwrite': True}
-
-[baseline]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
-
-[DceToR1]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
 
 [R1]
 r1_0_val = 0.7
