tau_i is an optional output.

--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -9,9 +9,19 @@ plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G'}
 
 [Fastfit]
 plugin_args = {'qsub_args': '-pe mpi 12-24 -l h_rt=24:00:00,mf=500M,h_vmem=4G', 'overwrite': True}
+
+# The model to optimize. fastfit -l lists the available models.
 model_name = 'baldero.full'
-optimization_params = ['k_trans', 'v_e', 'v_b', 'tau_b', 'tau_i']
-optional_outs = ['chisq', 'ext_tofts.k_trans', 'ext_tofts.v_e', 'ext_tofts.chisq']
+
+# The optimization parameters to upload into XNAT.
+# fastfit --show-model <model_name> lists the available parameters.
+optimization_params = ['k_trans', 'v_e', 'aif_shift']
+
+# The optional outputs to upload into XNAT. These are often
+# linear transformations of an optimization paramater, e.g.
+# the baldero tau_i is the reciprocal of k_io.
+# fastfit --show-model <model_name> lists the available outputs.
+optional_outs = ['chisq', 'tau_i', 'ext_tofts.k_trans', 'ext_tofts.v_e', 'ext_tofts.chisq']
 
 [create_profile]
 # Making the profile doesn't take long.
