--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -27,6 +27,10 @@ optional_outs = ['chisq', 'tau_i', 'ext_tofts.k_trans', 'ext_tofts.v_e', 'ext_to
 # Making the profile doesn't take long.
 plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=1G', 'overwrite': True}
 
+[copy_meta]
+# Loading both the source and target time series uses a lot of memory.
+plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=16G', 'overwrite': True}
+
 [R1]
 r1_0_val = 0.7
 base_end = 1
