base_name is fast.

--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -1,6 +1,9 @@
 [input_filename]
 run_without_submitting = True
 
+[base_name]
+run_without_submitting = True
+
 [fsl.FLIRT]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
 bins = 640
