--- a/qipipe/conf/qipipeline.cfg
+++ b/qipipe/conf/qipipeline.cfg
@@ -47,7 +47,7 @@ plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=16G', 'overwrite': True}
 # The registration time series tasks, esp. merge, require extra memory.
 #
 
-[merge_reg]
+[merge_reg_volumes]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
 
 [upload_reg_time_series]
