aif_shift is not an optimization parameter.

--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -15,7 +15,7 @@ model_name = 'baldero.full'
 
 # The optimization parameters to upload into XNAT.
 # fastfit --show-model <model_name> lists the available parameters.
-optimization_params = ['k_trans', 'v_e', 'aif_shift']
+optimization_params = ['k_trans', 'v_e']
 
 # The optional outputs to upload into XNAT. These are often
 # linear transformations of an optimization paramater, e.g.
