Make the regisstration time series in the registration workflow.

--- a/qipipe/conf/qipipeline.cfg
+++ b/qipipe/conf/qipipeline.cfg
@@ -19,12 +19,13 @@ plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G'}
 # Rather than guess at fixed durations, the person executing qipipe
 # is responsible for submitting the qipipe job with an inclusive
 # time limit. For a scan with 3200 DICOM files, execution time
-# estimates are as follows:
+# estimates on a moderate throughput cluster are as follows:
 #
 # * Staging: 24 hours
 # * Mask: 4 hours
 # * ANTs registration: 96 hours
-# * Bolero modeling: 72 hours
+# * AIRC modeling: 48 hours
+# * Total = 172 hours
 #
 # These estimates exclude queue wait.
 #
@@ -42,16 +43,6 @@ run_without_submitting = True
 
 [bolus_arrival_index]
 plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=16G', 'overwrite': True}
-
-#
-# The registration time series tasks, esp. merge, require extra memory.
-#
-
-[merge_reg_volumes]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
-
-[upload_reg_time_series]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
 
 [download_reg_time_series]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
