--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -4,6 +4,15 @@ run_without_submitting = True
 [base_name]
 run_without_submitting = True
 
+# The registration time series merge requires beaucoup memory.
+[merge]
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
+
+# Upload takes a while, but not as long as the scan upload,
+# since there are no DICOM files.
+[upload]
+plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
+
 [fsl.FLIRT]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
 bins = 640
