create_profile doesn't require much memory or time.

--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -4,6 +4,9 @@ run_without_submitting = True
 [base_name]
 run_without_submitting = True
 
+[create_profile]
+plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=100M', 'overwrite': True}
+
 # The registration time series merge requires beaucoup memory.
 [merge]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
