The merge node is named merge_volumes.

--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -8,7 +8,7 @@ run_without_submitting = True
 plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=100M', 'overwrite': True}
 
 # The registration time series merge requires beaucoup memory.
-[merge]
+[merge_volumes]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
 
 # Upload takes a while, but not as long as the scan upload,
