MergeNifti only needs 10 minutes.

--- a/qipipe/conf/default.cfg
+++ b/qipipe/conf/default.cfg
@@ -25,7 +25,11 @@ plug-in = 'SGE'
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G'}
 
 [MergeNifti]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
+# MergeNifti is used to create 4D time series images from 3D
+# volume images. For the OHSU QIN DCE scan, the time series is
+# on the order of 10-100 GB. The merge loads the volumes, and
+# needs a fair amount of real memory.
+plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=4G', 'overwrite': True}
 
 ## Interfaces that can run quickly enough not to submit as a
 ## cluster job.
